# RaceTimePredictor

./: .env.example  .gitignore  README.md  pyproject.toml
api/: config.py  horizon.py  main.py  schemas.py
api/routes/: health.py  predict.py  races.py
benchmarks/: runsignup_corpus.csv  sample_corpus.csv
catalog/: overrides.json  races.json
models/: trained_model.pkl
reports/: backtest.json  benchmark.json
src/race_predictor/: __init__.py  cli.py  constants.py  formatting.py  units.py
src/race_predictor/confidence/: __init__.py  scoring.py
src/race_predictor/data/: __init__.py  benchmark_loader.py  gpx_profile.py  loader.py  models.py  race_enrichment.py  runsignup_client.py  runsignup_corpus.py  runsignup_login.py  runsignup_oauth.py  weather.py
src/race_predictor/evaluate/: __init__.py  backtest.py  benchmark.py  metrics.py  split.py
tests/: test_api.py  test_baseline.py  test_benchmark.py  test_cli.py  test_confidence.py  test_features.py  test_gpx.py  test_loader.py  test_population.py  test_race_enrichment.py  test_residual.py  test_runsignup_client.py  test_runsignup_corpus.py  test_scaffold.py  test_weather.py
tests/fixtures/: catalog_test.json  runsignup_race_74589.json  runsignup_race_future_links.json  runsignup_results_74589_101.json  runsignup_results_individual_sets.json  runsignup_search_marathon.json  simple_hill.gpx
web/: .gitignore  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: FlowSelector.tsx  ManualConditionsForm.tsx  PredictionHorizonNotice.tsx  PredictionsTable.tsx
web/lib/: api.ts  format.ts
(+14 files in other folders)
