[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "race-predictor"
version = "0.1.0"
description = "Predict race times from Strava training data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
race-predictor = "race_predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
